--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,26 @@
 
 
 
-
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  
 
 *{
     margin: 0;
@@ -14,4 +33,5 @@
     box-sizing: border-box;
      font-family: "Quicksand", sans-serif;
      font-weight: 550;
+     scroll-behavior: smooth;
 }
